# sprios

./: Cargo.toml  scene_1.rsc
src/: camera.rs  color.rs  hittable.rs  imagebuffer.rs  main.rs  material.rs  ray.rs  scene_1.rsc  sphere.rs  vec.rs
src/benches/: Cargo.toml
src/benches/benches/: rand_benchmark.rs
src/benches/src/: lib.rs
src/gui/: window.rs
src/renderer/: Cargo.toml
src/renderer/src/: bbox.rs  buckets.rs  bvh.rs  camera.rs  color.rs  errors.rs  hittable.rs  imagebuffer.rs  lib.rs  material.rs  ray.rs  sampler.rs  settings.rs  sphere.rs  utils.rs  vec.rs  world.rs
src/sprios/: Cargo.toml
src/sprios/src/: app.rs  main.rs  sprios.rs  temp.rs  utils.rs  worlds.rs
src/viewer/: Cargo.toml
src/viewer/src/: dev.rs  example.h  lib.rs  main.rs  old.rs
