[package]
name = "sprios"
version = "0.1.0"
authors = ["Aleksei Rusev <arusev@imageworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rand = "0.7.3"
getopts = "0.2.21"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gdk-pixbuf]
version = "0.8.0"

[dependencies.gdk]
version = "0.12.1"

[dependencies.gio]
version = ""
features = ["v2_44"]

