[package]
name = "viewer"
version = "0.1.0"
authors = ["alexbb <hou.alexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gdk-pixbuf]
version = "0.8.0"
features = ["dox"]

[dependencies.gdk]
version = "0.12.1"

[dependencies.glib]
version = "0.9.3"

[dependencies.gio]
version = ""
features = ["v2_44"]
